test bumping api timecommander (untested)

--- a/TimeCommander/plugin.yml
+++ b/TimeCommander/plugin.yml
@@ -1,9 +1,6 @@
-name: TimeCommander
+name: TIMECMD
 main: LDX\TimeCommander\Main
 author: "LDX"
 version: 2.2
-api:
- - 3.0.0
- - 3.0.0-ALPHA7
+api: [3.0.0, 3.0.0-ALPHA12, 4.0.0]
 load: POSTWORLD
-website: "https://github.com/LDX-MCPE/TimeCommander"
