--- a/AirSneakBoots/plugin.yml
+++ b/AirSneakBoots/plugin.yml
@@ -1,9 +1,7 @@
 name: AirSneakBoots
 author: "jasonwynn10"
 version: 0.1.3
-api:
- - 3.0.0
- - 3.0.0-ALPHA7
+api: [3.0.0, 3.0.0-ALPHA12, 4.0.0]
 main: jasonwynn10\AirBoots\Main
 description: "Adds in boots that give the player the ability to sneak on air"
 commands:
