OMG WHAT HAVE I DONE I COPY AND PASTED FOMR TIMECMDER OMG IGNORE THE TYpOS

--- a/BanClientId/plugin.yml
+++ b/BanClientId/plugin.yml
@@ -1,9 +1,7 @@
 name: BanClientId
 author: "jasonwynn10"
 version: 0.1.0
-api:
- - 3.0.0
- - 3.0.0-ALPHA10
+api: [3.0.0, 3.0.0-ALPHA12, 4.0.0]
 main: jasonwynn10\Main
 description: "A plugin that allows banning client Ids"
 commands:
